--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,278 +1,312 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
   min-height: 100vh;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
+.landingDiv{
+  position: relative;
   width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+  height: 600px;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center; */
+  /* border-bottom: 2px solid #edc3d0;; */
+  box-shadow: 0px 10px 10px #f6e8ec;
 }
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+.landingDivFilter{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgb(0, 0, 0, .10);
 }
+/* .landingDiv img{
+  z-index: 0;
+  width: 100%;
+  height: 100%; 
+} */
 
-.description p {
+/* .image{
   position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
+} */
+/* .image img{
+  top: -90px;
+} */
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.titleDiv{
+  align-self: center;
+  width: 70%;
+  /* background-color: rgba(245, 242, 237, 0.2);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px); */
+  align-self: center;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 1;
+  border-radius: 5px;
 }
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
+.titleDiv h1{
+  color: #ffffff;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 4rem;
   font-weight: 600;
-  margin-bottom: 0.7rem;
+  max-height: 75px;
+  margin-bottom: -1rem;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 8px rgb(46, 46, 46);
+}
+.titleDiv h2{
+  text-transform: uppercase;
+  text-align: center;
+  font-family: Inter;
+  font-size: 2rem;
+  font-weight: 600;
+  color: #fff;
+  max-height: 30px;
+  margin-bottom: 1rem;
 }
 
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
+.titleDiv p{
+  text-transform: uppercase;
+  color: #ffffff;
+  font-size: 1.2rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Roboto;
+  font-weight: 400;
+  text-align: center;
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.682);
+  word-spacing: 10px;
+  z-index: 2;
 }
 
-.center {
+.titleDiv button{
+  align-self: center;
+  width: 140px;
+  font-family: Roboto;
+  background-color: #be986c;
+  color: #ffffff;
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: .2s ease;
+}
+.titleDiv button:hover{
+  background-color: #cfa473;
+}
+.titleDiv button:focus{
+  outline: none;
+  box-shadow: none;
+}
+
+.homeContainer{
+  align-self: center;
+  background-color: #f1f1f1;
+  width: 100%;
+  /* padding: 2rem; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  margin-bottom: 5rem;
+}
+
+.productNav{
+  align-self: center;
+  width: 80%;
+  /* height: 400px; */
+  /* background-color: #ffeef2; */
   display: flex;
   justify-content: center;
   align-items: center;
+  /* flex-wrap: wrap; */
+  gap: 2rem;
+  font-size: 2rem;
+  margin-top: 5.5rem;
+}
+.productNav a{
+  padding: 5px;
+  width: 40%;
+  background-color: white;
+  transition: .2s ease-in;
+}
+.productNav .imageDiv{
   position: relative;
-  padding: 4rem 0;
+  height: 100%;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
+.productNav .divv{
   position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+  background-color: rgba(8, 9, 9, 0.1);
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  transition: .5s linear;
+}
+.productNav .productNavCard:hover .divv{
+  background-color: rgba(8, 9, 9, 0.4);
 }
 
-.logo,
-.thirteen {
+.productNav .productNavCard{
   position: relative;
+  /* width: 50%;
+  min-width: 400px; */
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fdf2fd;
+  font-family: Century;
+  font-weight: lighter;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; */
+  cursor: pointer;
 }
 
-.thirteen {
+/* .productNav .productNavCard div{
+  border-radius: 5px;
+} */
+.productNav .productNavCard .productNavCardDetails{
+  position: absolute;
+  align-self: center;
+  width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
-  margin-left: 16px;
-  transform: translateZ(0);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  box-shadow: 0px 2px 8px -1px #0000001a;
+  
+}
+.productNav a:hover{
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.358);
 }
 
-.thirteen::before,
-.thirteen::after {
-  content: '';
-  position: absolute;
-  z-index: -1;
+.productNav .productNavCard img{
+  /* filter: blur(1px);
+  -webkit-filter: blur(1px); */
+  /* border-radius: 5px; */
+  height: 100%;
+  border-radius: 0;
+  width: 100%;
+  z-index: 0;
+  transition: all .5s linear;
+}
+/* .productNav .productNavCard:hover img{
+  filter: blur(1px);
+  -webkit-filter: blur(1px);
+  -webkit-transform: scale(1.03);
+  transform: scale(1.03);
+} */
+
+.productNav .productNavCard p{
+  padding: 9px;
+  background-color: #fff;
+  -webkit-transform: translateY(10px);
+  transform: translateY(10px);
+  font-size: 1.5rem;
+  font-family: Roboto;
+  text-transform: uppercase;
+  /* font-family: 'Times New Roman', serif; */
+  font-weight: 300;
+  color: rgb(125, 84, 84);
+  border-radius: 2px;
+  z-index: 2;
+  /* text-shadow: 2px 2px 4px rgb(39, 38, 38); */
+  transition: transform .5s ease-in-out;
+}
+.productNav .productNavCard button{
+  opacity: 0;
+  background-color: #cca982;
+  color: rgb(255, 255, 255);
+  border-radius: 2px;
+  border: none;
+  font-family: Poppins; 
+  font-weight: 300;
+  font-size: 1.1rem;
+  padding: 10px;
+  cursor: pointer;
+  z-index: 2;
+  transition: opacity .5s ease-in-out;
+}
+/* .productNav .productNavCard:hover p{
+  transform: translateY(-10px);
+} */
+/* .productNav .productNavCard:hover button{
+  opacity: 1;
+} */
+.productNav .productNavCard button:hover{
+  background-color: #be986c;
 }
 
-/* Conic Gradient Animation */
-.thirteen::before {
-  animation: 6s rotate linear infinite;
-  width: 200%;
-  height: 200%;
-  background: var(--tile-border);
+.howToBuyDiv{
+  background-color: #fff8f8;
+  padding: 2rem 0 5rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.howToBuyInfo{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.howToBuyDiv h4{
+  font-size: 2.5rem;
+  color: #634051;
+}
+.howToBuyDiv ul{
+  width: 40%;
+  margin-top: -2rem;
+  font-family: Nunito;
+  font-size: 1.3rem;
+  color: #634051;
+}
+.howToBuyDiv ul li{
+  margin-bottom: 20px;
 }
 
-/* Inner Square */
-.thirteen::after {
-  inset: 0;
-  padding: 1px;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    to bottom right,
-    rgba(var(--tile-start-rgb), 1),
-    rgba(var(--tile-end-rgb), 1)
-  );
-  background-clip: content-box;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+@media (max-width: 992px) {
+  .productNav a{
+    width: 50%;
   }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .thirteen::before {
-    animation: none;
-  }
-
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
+  .productNavCard{
     height: 300px;
   }
+}
 
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
+@media (max-width: 768px) {
+  .titleDiv {
     width: 100%;
+    padding: 0;
+  }
+  .titleDiv h1{
+    margin: 0;
+    font-size: 3rem;
+    margin-left: 0;
+  }
+  .titleDiv h2{
+    font-size: 1.5rem;
+    margin-bottom: 50px;
+    padding: 0;
+    margin-left: 0;
+  }
+  .titleDiv p{
+    font-size: 1rem;
   }
 
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
+  .productNav {
+    width: 100%;
+    flex-direction: column;
   }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
+  .productNav a{
+    width: 90%;
   }
 }
