--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,72 +5,7 @@
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+ 
 }
 
 * {
@@ -82,10 +17,11 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  min-height: 100vh;
+  /* overflow-x: hidden; */
 }
 
-body {
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -93,15 +29,213 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
 
 a {
   color: inherit;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+nav{
+  position: sticky;
+  top: 0;
+  width: 100%;
+  height: 80px;
+  padding: 2rem;
+  /* background-color: rgb(255, 240, 245); */
+  /* background-color: #fff4f9; */
+  background-color: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 1px 4px 0 rgb(192, 192, 192);
+  /* border-bottom: 1px solid rgb(255, 243, 243); */
+  z-index: 3;
+  transition: all 0.2s ease-in-out;
+}
+
+.logo-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logo-div a:last-child{
+  margin-left: 30px;
+}
+
+nav span{
+  cursor: pointer;
+  display: flex;
+  margin-left: 1.5rem;
+  color: #606060;
+}
+
+nav .nav_links{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: .2rem;
+  color: #606060;
+  font-family: Poppins;
+}
+
+
+nav .nav_links div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+nav .howToBuy-link{
+  cursor: pointer;
+  font-family: Inter;
+  font-size: .9rem;
+  color: rgb(125, 84, 84);
+  justify-self: flex-start;
+  /* font-weight: 700; */
+  transition: .3s ease;
+}
+nav .howToBuy-link:hover{
+  color: rgb(174, 126, 126);
+}
+nav .nav_links a{
+  cursor: pointer;
+  font-family: Inter;
+  font-size: .9rem;
+  color: rgb(125, 84, 84);
+  /* font-weight: 700; */
+  transition: .3s ease;
+}
+nav .nav_links a:hover{
+  color: rgb(174, 126, 126);
+}
+
+
+nav svg{
+  cursor: pointer;
+  font-size: 1.1rem;
+  color: rgb(125, 84, 84);
+  /* transition: .3s ease; */
+}
+nav svg:hover{
+  color: rgb(145, 101, 101);
+}
+
+nav .bag-wrapper{
+  position: relative;
+  font-size: .9rem;
+  /* transition: 3s ease-in-out; */
+}
+nav .bag-wrapper b{
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  top: -7px;
+  right: -13px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12px;
+  background-color: rgb(236, 225, 225);
+  border-radius: 50%;
+  padding: 2px;
+  font-weight: 500;
+  color: rgb(255, 255, 255);
+}
+
+nav .logo{
+  margin-left: 1rem;
+}
+nav .logo img{
+  border-radius: 50%;
+}
+
+nav.sticky {
+  height: 70px;
+  width: 100%;
+  background-color: #fffffff1;
+  backdrop-filter: blur(5px);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 12;
+}
+
+.footer {
+  width: 100%;
+  /* background-color: rgb(255, 230, 236); */
+  background-color: #e6e6e6;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: auto;
+  
+}
+.footer div{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 40px;
+  border-top: 2px solid rgb(216, 216, 216);
+}
+.footer ul{
+  margin-top: .5rem;
+  list-style-type: none;
+}
+.footer ul b{
+  font-size: 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 400;
+  color: #5c5b5d;
+}
+.footer li{
+  text-transform: uppercase;
+  margin-top: 10px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #5c5b5d;
+}
+.footer li a:hover{
+  color: rgb(116, 74, 74);
+  text-decoration: underline;
+  cursor: pointer;
+}
+.footer p{
+  font-family: Roboto;
+  font-size: 12px;
+  color: rgba(125, 84, 84, 0.483);
+  margin-top: 15px;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  background-color: #f1f1f1;
+  display: flex;
+  flex-direction: column;
+}
+
+.container h1{
+  font-family: Roboto;
+  color: #3c4858;
+  margin-top: 2rem;
+  margin-left: 2rem;
+}
+.container h2{
+  font-family: Roboto;
+  color: #3c4858;
+  margin-top: 2rem;
+  margin-left: 2rem;
+  margin-bottom: 1.4rem;
+  font-weight: 400;
+}
+
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
