--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -182,7 +182,7 @@ nav.sticky {
   list-style-type: none;
 }
 .footer ul b{
-  font-size: 20px;
+  font-size: 17px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
   color: #5c5b5d;
@@ -191,8 +191,9 @@ nav.sticky {
   text-transform: uppercase;
   margin-top: 10px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 14px;
-  font-weight: 300;
+  font-family: Poppins;
+  font-size: 12px;
+  font-weight: 400;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -203,6 +204,10 @@ nav.sticky {
   text-decoration: underline;
   cursor: pointer;
 }
+.footer li:hover svg{
+  color: rgb(116, 74, 74);
+}
+
 .footer p{
   font-family: Roboto;
   font-size: 12px;
@@ -232,6 +237,37 @@ nav.sticky {
   margin-left: 2rem;
   margin-bottom: 1.4rem;
   font-weight: 400;
+}
+
+.error-page{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5rem;
+}
+.error-page h1{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  margin-bottom: 0;
+}
+.error-page h2{
+  font-family: Inter;
+  font-weight: 300;
+  margin: 0;
+}
+.error-page a{
+  background-color: rgb(125, 84, 84);
+  font-family: Roboto;
+  font-size: 1.2rem;
+  font-weight: 300;
+  padding: 10px;
+  border-radius: 3px;
+  color: #f9f9f9;
+  margin-top: 2rem;
+}
+.error-page a:hover{
+  background-color: rgb(143, 102, 102);
 }
 
 /* @media (prefers-color-scheme: dark) {
