--- a/src/styles/Category.module.css
+++ b/src/styles/Category.module.css
@@ -8,7 +8,57 @@
     justify-items: center;
     flex-wrap: wrap;
   }
-  
+ 
+  .categoryTitle{
+    background-color: #ffffff50;
+    width: 300px;
+    padding: 10px;
+    border-radius: 2px;
+    text-align: center;
+    /* box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); */
+  }
+  .image img{
+  top: -90px;
+  transition: opacity 0.5s;
+  }
+.image.fadeIn{
+  animation: fade-in 0.5s forwards;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+  .titleDiv{
+    align-self: center;
+    width: 70%;
+    /* background-color: rgba(245, 242, 237, 0.2);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px); */
+    align-self: center;
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 1;
+    border-radius: 5px;
+  }
+  .titleDiv h1{
+    color: #ffffff;
+    text-align: left;
+    font-family: Roboto;
+    font-family: Palatino Linotype,Book Antiqua,Palatino,serif;
+    font-family: Victor Mono;
+    font-size: 3rem;
+    font-weight: 600;
+    letter-spacing: 3px;
+    /* text-transform: uppercase; */
+    text-shadow: 1px 1px 8px rgb(46, 46, 46);
+  }
   .homeContainer h2{
     font-family: Poppins;
   }
@@ -174,7 +224,7 @@
     justify-content: flex-start;
     align-items: center;
     gap: 40px;
-    /* background-color: #f7f7f7; */
+    background-color: #ffffff;
     border-radius: 5px;
     padding: 1rem;
     margin-top: 3rem;
@@ -182,27 +232,27 @@
   }
   
   .categoryLinks a{
-      color: rgb(125, 84, 84);
+      color: rgb(178, 130, 130);
       z-index: 2;
-      font-size: 1rem;
+      font-size: 1.3rem;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        
+      font-family: Inter;
       font-weight: 300;
       text-transform: uppercase;
   }
   
   .categoryLinks a.active{
-      color: rgb(125, 84, 84);
+      color: rgb(178, 130, 130);
       font-weight: 600;
-      /* border-bottom: 2px solid; */
+      border-bottom: 2px solid;
   }
   
   
   .categoryLinks a:hover{
-      color: rgb(178, 130, 130);
+      color: rgb(204, 169, 169);
   }
   .categoryLinks a.active:hover{
-    color: rgb(125, 84, 84);
+    color: rgb(178, 130, 130);
   }
   
   .sortForm{
@@ -210,6 +260,7 @@
     /* background-color: #7250f8; */
     top: -30px;
     align-self: flex-end;
+    margin-top: 10px;
     /* margin-bottom: -1rem; */
   }
   .sortForm label{
@@ -289,6 +340,9 @@
   }
   
   @media (max-width: 768px) { 
+    .titleDiv h1{
+      font-size: 3rem;
+    }
     .homeProducts{
       width: 100%;
       grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -296,6 +350,15 @@
    }
   
   @media (max-width: 576px){
+    .titleDiv{
+      width: 100%;
+    }
+    .titleDiv h1{
+      width: 100%;
+      font-size: 2.5rem;
+      /* text-align: center; */
+      margin: 0;
+    }
     .homeContainer{
       width: 100%;
       padding: 0;
@@ -344,10 +407,20 @@
   
     .categoryLinks{
       justify-content: center;
-      margin-top: .5rem;
+      /* margin-top: 2rem; */
       margin-bottom: 2rem;
       border-radius: px;
       gap: 30px;
+      background-color: #e7e7e7;
+      height: 80px;
+    }
+    .homeProducts form label{
+      font-family: Roboto;
+      color: #3c4858;
+    }
+    .homeProducts form select{
+      color: #3c4858;
+      font-size: .66rem;
     }
     .categoryLinks a{
       font-size: .9rem;
@@ -359,5 +432,11 @@
   
     .sortForm {
       align-self: flex-start;
+    }
+    .sortForm label{
+      font-size: 12px;
+    }
+    .sortForm select{
+      font-size: 10px !important;
     }
   }
