--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -36,7 +36,7 @@
     margin-top: -1.5rem;
     color: #3c4858;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-family: Roboto;
+    font-family: Victor Mono;
     font-weight: 400;
     font-size: 27px;
 }
@@ -88,14 +88,14 @@
 }
 
 .productDetails h3{
-    font-family: Inter;
+    font-family: Poppins;
     font-weight: 400;
     margin-top: 2.5rem;
     margin-bottom: 10px;
     color: #3c4858;
 }
 .productDetails h4{
-    font-family: Inter;
+    font-family: Poppins;
     font-weight: 500;
     font-size: 1.1rem;
     margin-bottom: 10px;
@@ -127,6 +127,7 @@
     padding-right: 20px;
     color: #3c4858;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Poppins;
     font-weight: 300;
     margin-bottom: 2rem;
 }
@@ -137,7 +138,7 @@
     background-color: rgb(125, 84, 84);
     color: white;
     border: transparent;
-    border-radius: 3px;
+    border-radius: 2px;
     padding: 10px;
     font-size: 1rem;
     font-family: Inter;
@@ -148,8 +149,8 @@
     cursor: pointer;
     transition: .2s ease-in-out;
 }
-.product button:hover{
-    background-color: rgb(158, 121, 149);
+.product .addToCart:hover{
+    background-color: rgb(149, 108, 108);
 }
 
 .productImages{
@@ -186,23 +187,24 @@
 }
 .imgViewer .imgSelect{
     position: relative;
-    width: 100px !important;
-    height: 100px;
-    padding: 0px !important;
+    height: 74px;
+    padding: 0 !important;
     margin: 0 !important;
     border-radius: 0px !important;
     background: transparent !important;
     border: 2px solid transparent;
+    transition: .2s ease;
 }
 .imgViewer .imgSelect:focus {
-    border: 2px solid rgb(214, 145, 206);
+    border: 2px solid rgb(125, 84, 84);
 }
 .imgViewer .imgSelect:hover {
-    border: 2px solid rgb(214, 145, 206);
+    border: 2px solid rgb(168, 139, 139);
 }
 .imgViewer .imgSelect img{
     width: 70px;
     height: 70px;
+    margin: 0 !important;
 }
 
 .form{
