--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -184,6 +184,7 @@ nav.sticky {
 .footer ul b{
   font-size: 17px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Poppins;
   font-weight: 400;
   color: #5c5b5d;
 }
@@ -192,7 +193,7 @@ nav.sticky {
   margin-top: 10px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-family: Poppins;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 400;
   display: flex;
   align-items: center;
@@ -229,6 +230,8 @@ nav.sticky {
   color: #3c4858;
   margin-top: 2rem;
   margin-left: 2rem;
+  font-family: Palatino Linotype,Book Antiqua,Palatino,serif;
+  font-family: Victor Mono;
 }
 .container h2{
   font-family: Roboto;
@@ -237,7 +240,12 @@ nav.sticky {
   margin-left: 2rem;
   margin-bottom: 1.4rem;
   font-weight: 400;
+  font-family: Palatino Linotype,Book Antiqua,Palatino,serif;
+  font-family: Poppins;
 }
+/* .container p{
+  font-family: Palatino Linotype,Book Antiqua,Palatino,serif;
+} */
 
 .error-page{
   display: flex;
