--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -141,6 +141,10 @@
     gap: 15px;
     padding: 1rem;
     border-bottom: 1px solid rgb(0 0 0 / 5%);
+    transition: .1s linear;
+}
+.cartProduct:hover{
+    background-color: #f5f5f5;
 }
 .cartProduct:last-child{
     border-bottom: none;
@@ -259,15 +263,15 @@
 
 .cartProduct .productInfo .productTitle{
     cursor: pointer;
-    font-family: Roboto;
+    font-family: Inter;
     /* font-family: Nunito; */
     overflow: hidden;
     text-overflow: ellipsis;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     -webkit-line-clamp: 2;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    color: rgb(33, 33, 33);
+    color: rgb(76, 76, 76);
     font-weight: 400;
     font-size: 1.1rem;
 }
@@ -290,6 +294,18 @@
     padding: 20px;
     padding-top: 50px;
     margin-top: 3rem;
+}
+.orderPageTitle{
+    margin-top: 2rem;
+    align-self: center;
+    /* width: 100%; */
+    max-width: 500px;
+    padding-bottom: 10px;
+    background-color: #c8f3c7;
+    border-radius: 2px;
+    padding: 10px;
+    padding-right: 15px;
+    box-shadow: 4px 4px 2px #b5deb4;
 }
 
 .order {
@@ -642,6 +658,11 @@
     .orderContainer{
         flex-direction: column;
         width: 100%;
+    }
+    .orderPageTitle{
+        margin-top: 0;
+        box-shadow: 0px 2px #b5deb4;
+        margin-bottom: -2.9rem;
     }
     .order{
         width: 100%;
