--- a/src/styles/Category.module.css
+++ b/src/styles/Category.module.css
@@ -17,8 +17,17 @@
     text-align: center;
     /* box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); */
   }
+  .landingDivFilter{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgb(0, 0, 0, .20);
+  }
   .image img{
-  top: -90px;
+  top: -180px;
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
   transition: opacity 0.5s;
   }
 .image.fadeIn{
@@ -47,16 +56,25 @@
     z-index: 1;
     border-radius: 5px;
   }
+  
   .titleDiv h1{
     color: #ffffff;
     text-align: left;
     font-family: Roboto;
     font-family: Palatino Linotype,Book Antiqua,Palatino,serif;
-    font-family: Victor Mono;
+    /* font-family: Victor Mono; */
+    font-family: Poppins;
     font-size: 3rem;
     font-weight: 600;
+    font-weight: 400;
     letter-spacing: 3px;
     /* text-transform: uppercase; */
+    background-color: rgba(249, 231, 251, 0.2);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(2px);
+    max-width: 550px;
+    padding: 10px;
+    border-radius: 3px;
     text-shadow: 1px 1px 8px rgb(46, 46, 46);
   }
   .homeContainer h2{
@@ -207,14 +225,17 @@
   .homeProduct .productDetails span{
     position: absolute;
     top: 85%;
-    left: 65%;
+    left: 70%;
     font-size: .9rem;
-    font-family: Inter;
+    font-family: Poppins;
     /* font-weight: 400; */
-    font-weight: 500;
+    font-weight: 400;
     /* font-style: italic; */
     /* color: #76646d; */
-    color: rgb(74, 74, 74);
+    /* background-color: #f5f5f5; */
+    padding: 3px;
+    border-radius: 2px;
+    color: rgb(92, 92, 92);
   }
   
   .categoryLinks{
@@ -227,23 +248,24 @@
     background-color: #ffffff;
     border-radius: 5px;
     padding: 1rem;
-    margin-top: 3rem;
+    margin-top: 1rem;
     transition: .6s ease-in-out;
   }
   
   .categoryLinks a{
       color: rgb(178, 130, 130);
       z-index: 2;
-      font-size: 1.3rem;
+      font-size: 1rem; 
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       font-family: Inter;
+      font-family: Roboto;
       font-weight: 300;
       text-transform: uppercase;
   }
   
   .categoryLinks a.active{
       color: rgb(178, 130, 130);
-      font-weight: 600;
+      font-weight: 500;
       border-bottom: 2px solid;
   }
   
@@ -260,7 +282,7 @@
     /* background-color: #7250f8; */
     top: -30px;
     align-self: flex-end;
-    margin-top: 10px;
+    margin-top: 30px;
     /* margin-bottom: -1rem; */
   }
   .sortForm label{
@@ -347,6 +369,9 @@
       width: 100%;
       grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     }
+    .image img{
+      top: -50px;
+    }
    }
   
   @media (max-width: 576px){
@@ -355,8 +380,8 @@
     }
     .titleDiv h1{
       width: 100%;
-      font-size: 2.5rem;
-      /* text-align: center; */
+      font-size: 1.6rem;
+      text-align: center;
       margin: 0;
     }
     .homeContainer{
@@ -373,6 +398,11 @@
       padding-bottom: 50px;
     }
   
+    .homeProduct .productDetails span{
+      top: 75%;
+      left: 5%;
+    }
+
     .homeProduct{
       margin-bottom: -2rem;
       flex-direction: column;
@@ -383,13 +413,13 @@
       min-height: 140px;
     }
     .homeProduct .productDetails h2{
-      font-size: 1.1rem;
+      font-size: 1rem;
       /* margin-top: 22px; */
       margin-bottom: 18px;
       margin-left: 12px;
     }
     .productDetails p{
-      font-size: .8rem;
+      font-size: .9rem;
       margin-left: 12px;
     }
     .productDetails span{
