--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -37,6 +37,7 @@
     color: #3c4858;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-family: Victor Mono;
+    font-family: Inter;
     font-weight: 400;
     font-size: 27px;
 }
