--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -218,6 +218,26 @@
     box-shadow: 0 2px 10px 2px rgba(135,97,36,0.14), 0 3px 1px -2px rgba(135,97,36,0.2), 0 1px 5px 0 rgba(135,97,36,0.12);
     color: rgb(255, 255, 255);
 }
+.cartContainer .continueShoppingBtn{
+    font-size: 1rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    cursor: pointer;
+    text-align: center;
+    text-transform: uppercase;
+    border-radius: 3px;
+    /* background-color: rgb(114, 177, 89); */
+    /* background-color: #948baa; */
+    color: rgb(92, 92, 92);
+    /* box-shadow: 0 2px 2px 0 rgba(135,97,36,0.14), 0 3px 1px -2px rgba(135,97,36,0.2), 0 1px 5px 0 rgba(135,97,36,0.12); */
+    border: 1px solid transparent;
+    margin-top: -3rem;
+    transition: all .2s;
+}
+.continueShoppingBtn:hover{
+    text-decoration: underline;
+    color: rgb(62, 62, 111);
+}
 /* }
  .cartContainer button > svg {
     width: 35px;
@@ -432,10 +452,11 @@
     box-shadow: 0px 0px 1px 2px rgb(219, 206, 225);
 }
 .suggestion{
-    color: #727272;
+    color: #4a4a4a;
     font-family: Inter;
-    font-size: .8rem;
-    margin-top: 5px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-top: 10px;
     margin-bottom: 20px;
 }
 .emailDiv button{
@@ -465,8 +486,8 @@
 
 .emailDiv span:last-child{
     margin-left: 5px;
-    font-size: .9rem;
-    font-weight: 500;
+    font-size: 1.2rem;
+    font-weight: 600;
     color: rgb(73, 91, 207);
     cursor: pointer;
 }
